--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
     border: 0;
+    text-decoration: none;
+}
+:root {
+    --main-color: #fa507b;
+    --color-rocket: #7159c1;
 }
 body{
     background: #282a36;
@@ -12,17 +17,112 @@ header {
     border-bottom: 1px solid #333;
     background: rgba(0, 0, 0, 0.1);
 }
-header div {
+.links {
     text-align: center;
 }
-header div a {
+.links a {
     color: white;
     font-size: 18px;
     line-height: 28px;
     margin: 0 16px;
-    text-decoration: none;
 }
-header div a:hover {
-    color: #fa507b;
-    transition: color 900ms;
+.links a:hover {
+    color: var(--main-color);
+    transition: color 800ms;
+}
+#wrapper {
+    text-align: center;
+    padding-top: 32px;
+}
+#wrapper img {
+    border-radius: 50%;
+    border: 5px solid var(--main-color);
+    width: 300px;
+    height: 300px;
+}
+#wrapper h1 {
+    font-size: 42px;
+    line-height: 52px;
+    font-weight: bold;
+}
+#wrapper h2 {
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: normal;
+    margin-top: 8px;
+}
+#wrapper p {
+    max-width: 400px;
+    margin: 20px auto;
+    font-size: 16px;
+    line-height: 20px;
+}
+#links-footer a {
+    text-decoration: underline;
+}
+
+/*== CARDS ==*/
+
+.cards {
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+.card {
+    background-color: var(--color-rocket);
+}
+.card-image-container img {
+    width: 100%;
+}
+.card-content,
+.card-info {
+    padding: 24px;
+}
+.card-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.card-price {
+    background-color: var(--color-rocket);
+    filter: brightness(90%);
+    padding: 5px 20px;
+    border-radius: 20px;
+    text-align: center;
+}
+
+/*== MODAL ==*/
+
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal {
+    background-color: white;
+    width: 90%;
+    height: 90%;
+    margin: 5vh auto;
+    position: relative;
+}
+
+.modal .close-modal {
+    color: black;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+}
+
+/*== MODAL.ACTIVE ==*/
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
 }
