--- a/public/styles.css
+++ b/public/styles.css
@@ -72,6 +72,8 @@ header {
 }
 .card {
     background-color: var(--color-rocket);
+    display: grid;
+    align-items: center;
 }
 .card-image-container img {
     width: 100%;
