--- a/public/styles.css
+++ b/public/styles.css
@@ -61,7 +61,7 @@ header {
     text-decoration: underline;
 }
 
-/*== CARDS ==*/
+/* === CARDS === */
 
 .cards {
     max-width: 800px;
@@ -74,6 +74,7 @@ header {
     background-color: var(--color-rocket);
     display: grid;
     align-items: center;
+    cursor: pointer;
 }
 .card-image-container img {
     width: 100%;
@@ -94,7 +95,7 @@ header {
     text-align: center;
 }
 
-/*== MODAL ==*/
+/* === MODAL === */
 
 .modal-overlay {
     background-color: rgba(0, 0, 0, 0.7);
@@ -122,7 +123,7 @@ header {
     cursor: pointer;
 }
 
-/*== MODAL.ACTIVE ==*/
+/* === MODAL.ACTIVE === */
 
 .modal-overlay.active {
     opacity: 1;
@@ -135,4 +136,20 @@ iframe {
     position: absolute;
     top: 7%;
     left: 5%;
+}
+
+/* === FEATURED === */
+
+.featured-wrapper.card-image-container {
+    position: relative;
+}
+
+.featured {
+    background-color: #f7d85f;
+    color: #111;
+    padding: 2px 8px;
+    position: absolute;
+    right: 2px;
+    border-radius: 16px;
+    top: -6px;
 }
