--- a/views/portfolio.njk
+++ b/views/portfolio.njk
@@ -27,8 +27,11 @@
             
             {% for item in items %}
             <div class="card" id="{{item.id}}">
-                <div class="card-image-container">
+                <div class="card-image-container {{ 'featured-wrapper' if item.featured }}">
                     <img src="http://i3.ytimg.com/vi/{{item.id}}/maxresdefault.jpg" alt="imagem de {{item.title}}">
+                    {% if item.featured %}
+                        <div class="featured">Featured</div>
+                    {% endif %}
                 </div>
                 <div class="card-content">
                     <p>{{item.title}}</p>
